Fixed nav alignment

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -374,10 +374,6 @@ nav.nav-main.open button::after {
 .footer ul {
 	
 }
-.nav-main {
-	text-align: right;
-}
-
 .nav-pagination {
 	
 }
